--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
   },
   "dependencies": {
     "@fastify/accepts": "^4.1.0",
+    "@types/accepts": "^1.3.5",
     "fastify-plugin": "^4.5.0"
   },
   "devDependencies": {
